Trying to solve the spacing issues.

--- a/public/css/poole.css
+++ b/public/css/poole.css
@@ -821,6 +821,12 @@ form { max-width:100%; margin:50px auto; }
   outline:0;
 }
 
+#cbox
+{
+  padding: 13px;
+  margin-bottom: 15px;
+}
+
 input[type=checkbox].checkboxCC {
 	position:absolute; z-index:-1000; left:-1000px; overflow: hidden; clip: rect(0 0 0 0); height:1px; width:1px; margin:-1px; padding:0; border:0;
 }
